--- a/scss/form.scss
+++ b/scss/form.scss
@@ -8,7 +8,7 @@
         position: relative;
         display: flex;
         gap: 11%;
-        justify-content: space-between; 
+        justify-content: space-between;         
         @media (max-width: 991.98px) {
             flex-direction: column;
             padding: 40px 0 56px;
@@ -63,7 +63,7 @@
             padding: 20px 0 0px; 
         }
     }
-    &__message {
+    &__message {        
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -108,7 +108,7 @@
             margin-bottom: 28px;
             font-size: 16px; 
         }
-    }
+    }    
     &__text {        
         padding: 20px 32px 100px;
         margin-bottom: 40px;
@@ -150,12 +150,129 @@
             font-size: 18px;
         }
     }
-
     input:focus {
         color: #2C2C2C;  
     }
 
     input:focus::-webkit-input-placeholder {
         color: transparent;
+    }    
+}
+
+.error {
+    color: #E83939;
+}
+
+.error-name {
+    margin: 0px;
+    padding: 0px;     
+}
+
+.error-phone {
+    margin: 0;
+    padding: 0;    
+}
+
+.error-message {          
+    width: 250px;     
+    background-image: url("../images/border-error.svg");
+    background-size:contain;
+    background-position:right;
+    background-repeat: no-repeat;
+    padding: 18px 16px;   
+    margin: 0 0 0 auto;
+    margin-bottom: 8px;    
+    font-size: 14px;
+    line-height: 130%;  
+    text-align: center; 
+}
+
+
+/*Popup=======================*/
+.popup {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;        
+    background: rgba(28, 28, 28, 0.40); 
+    &__container{
+        position: absolute;
+        top: 50%;
+        left: 50%;    
+        transform: translate(-50%, -50%);   
+        width: 813px;
+        padding: 105px 0;
+        border-radius: 30px;
+        background: #FFF;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);  
+        @media (max-width: 991.98px) {
+            width: 600px;
+            padding: 70px 0;
+        }
+        @media (max-width: 767.98px) {
+            width: 90%;
+        }  
+    }    
+    &__close {
+        position: absolute;
+        top: 22px;
+        right: 22px;
+        width: 30px;
+        height: 30px;
+        background: none;
+        background-image: url(../images/popup-close.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        border: none;
     }
+    &__title {
+        padding: 0 0 41px;
+        margin: 0;
+        font-size: 72px;
+        font-weight: 600;
+        text-align: center;
+        @media (max-width: 991.98px) {
+            font-size: 36px;
+        }       
+    }
+    &__text {        
+        margin: 0;
+        font-size: 36px;
+        font-weight: 400;
+        text-align: center;
+        @media (max-width: 991.98px) {
+            font-size: 18px;
+        }
+    }
+    &__star-big {
+        position: absolute;
+        top: 0;
+        left: 0;
+        @media (max-width: 991.98px) {
+            width: 150px;
+            height: 150px;
+        }
+        @media (max-width: 767.98px) {
+            width: 100px;
+            height: 100px;
+        }
+    }
+    &__star-small {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        @media (max-width: 767.98px) {
+            width: 80px;
+            height: 80px;
+        }
+    }    
+}
+
+.closen {
+    display: none;
+}
+.opened {
+    display: block;
 }
